src/dotnet/Chat.UI.Blazor/Components/ChatMenu/chat-menu.css
.chat-menu-btn.btn.btn-round {
    @apply w-8 h-12;
}
.visible-menu {
    @apply flex;
}
.visible-menu .chat-menu-btn.btn-round.on {
    @apply visible;
}
.visible-menu .chat-menu-btn.btn-round.off,
.visible-menu .chat-menu-btn.btn-round {
    @apply invisible;
}
.navbar-item:hover .visible-menu .chat-menu-btn.btn-round.off,
.navbar-item:hover .visible-menu .chat-menu-btn.btn-round {
    @apply visible;
}
.invisible-menu {
    @apply hidden;
}
.navbar-item:hover .invisible-menu {
    @apply flex;
}
.navbar-item:hover .invisible-menu-menu .chat-menu-btn.btn-round.off,
.navbar-item:hover .invisible-menu .chat-menu-btn.btn-round {
    @apply visible;
}
.chat-menu-btn.btn.btn-round.on:hover .btn-content {
    @apply text-primary;
}
.show-headphones .btn.btn-round.play {
    @apply visible;
}
.message-counter-badge {
    @apply absolute right-0 flex-x min-w-8 justify-center items-center rounded-full text-04 text-base;
}
.navbar-item:hover .message-counter-badge {
    @apply hidden;
}

